tests/invalid/syntax/union_missing_type.fig
// Invalid: Union variant with missing type
union BadUnion
    ok: i32
    error
    pending: bool
